message ObservedMessage {
  Field1Message field_1 = 1;

  message Field1Message {
    Field1Message field_1 = 1;
    Field5Message field_5 = 5;

    message Field1Message {
      bytes field_1 = 1;
      bytes field_2 = 2;
      Field4Message field_4 = 4;
      Field7Message field_7 = 7;

      message Field4Message {
        bytes field_1 = 1;
        bytes field_2 = 2;
      }
      message Field7Message {
        bytes field_2 = 2;
        Field4Message field_4 = 4;

        message Field4Message {
          int64 field_1 = 1;
          int64 field_2 = 2;
        }
      }
    }
    message Field5Message {
      int64 field_1 = 1;
      int64 field_2 = 2;
    }
  }
}